--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=Aseantech
 keyPassword=Aseantech
 keyAlias=upload
-storeFile=../app/atromanpartner.jks
+storeFile=/Users/phamngocha/Documents/Aseantech/PartnerApp/astrologer_app/android/app/atromanpartner.jks
